--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>TableQuest</title>
   <link rel="stylesheet" href="style/style.css">
-  <script src="script/zepto.min.js"></script>
+  <script src="script/zepto.js"></script>
   <script src="script/fx.js"></script>
   <script src="script/main.js"></script>
 </head>
