Corrigido keypress de map e editor

--- a/blockly.html
+++ b/blockly.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
-    <xml id="toolbox" style="display: none">
+    <xml id="toolbox">
   <block type="controls_if"></block>
   <block type="controls_repeat_ext"></block>
   <block type="logic_compare"></block>
