--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <title>TableQuest</title>
   <link rel="stylesheet" href="style/style.css">
+  <script src="script/blockly/acorn_interpreter.js"></script>
+  <script src="script/blockly/blockly_compressed.js"></script>
+  <script src="script/blockly/blocks_compressed.js"></script>
+  <script src="script/blockly/javascript_compressed.js"></script>
+  <script src="script/blockly/msg/js/pt-br.js"></script>
+  <script src="script/blockly/block_test.js"></script>
   <script src="script/zepto.js"></script>
   <script src="script/fx.js"></script>
   <script src="script/main.js"></script>
