Implementando blockly em painel deslizante

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
   <script src="script/main.js"></script>
 </head>
 <body>
+  <!--div id='editor_area'>
+    <div id="blocklyDiv"></div>
+    <div id='console-display'></div>
+    <div id='console-panel'></div>
+  </div-->
   <div id="talk"></div>
   <div id="area"></div>
+
 </body>
 </html>
